# game_site

./: Makefile  README.md  pyproject.toml
game/: launch_game.py  utils.py
game/classes/: NPC.py  base.py  heroes.py  items.py  monster.py  room.py
game/rooms/level_1/: modnster_list.py  persons.py  rooms.py
game/src/: launch_game.py
game/src/classes/: NPC.py  heroes.py  items.py  monster.py  room.py
game/src/rooms/level_1/: modnster_list.py  persons.py  rooms.py
web_app/: main.py  schemas.py  utils.py
web_app/static/: script.js  style.css
web_app/templates/: base.html  fight.html  index.html  level1.html  move_rooms.html
